--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi there, I'm Lakshmi Venkatasubramanian!</h1>
+				<p>With over 10 years’ experience spanning Test Engineering and Data Analytics, supporting and driving projects End to End, I am looking forward to opportunities in Data Science/Machine Learning and Product space. I strongly believe that the industrial experience in various domain and customer settings, demonstrated leadership, continuous learning and coursework foundation have prepared me to embrace unseen challenges in the data world and beyond.
+
+In the current role at Puget Sound Energy, I lead the testing efforts of Data Analytics projects, make sure data looks correct and complete, and visually well represented to end customers via dashboards. I also reverse engineer and debug stored procedures and code to understand the business rules and logic. Prior to this role, I worked for Kaiser Permanente, Microsoft and Liberty Mutual in Lead Data Analyst and Test Engineer positions. I am interested in Deep Learning and Reinforcement learning. Currently pursuing masters in Data Science at University of Washington.
+
+Summary of skills:
+• Knowledge of Statistics, End to End Data Science process, Exploratory Data Analysis/Data Mining and data visualization using Tableau and Power BI.
+• Data analysis using SQL and programming using Java, Python and R
+• Implementation of Machine learning models such as Ridge Regression, logistic regression, Support Vector Machine, Principal Component Analysis and LASSO mathematically and using analysis packages such as NumPy, Scikit-learn, Pytorch and pandas.
+• Good understanding of the concepts of Experimentation Design such as A/B testing, Hypothesis Testing, ANOVA, Linear Regression.
+• Working knowledge of continuous integration using Github and Jenkins and hands on executing code through cloud instances such as AWS EC2.  <a href="/about">add link here</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
