--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 <li>Data analysis using SQL and programming using Java, Python and R</li>
 <li>Implementation of Machine learning models such as Ridge Regression, logistic regression, Support Vector Machine, Principal Component Analysis and LASSO mathematically and using analysis packages such as NumPy, Scikit-learn, Pytorch and pandas.</li>
 <li>Good understanding of the concepts of Experimentation Design such as A/B testing, Hypothesis Testing, ANOVA, Linear Regression.</li>
-<li>Working knowledge of continuous integration using Github and Jenkins and hands on executing code through cloud instances such as AWS EC2.  <a href="/about">add link here</a></li>
+<li>Working knowledge of continuous integration using Github and Jenkins and hands on executing code through cloud instances such as AWS EC2.</li>
 <ul>
 
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:lakshmi2688@gmail.com">email</a></li>
+        		<li><a href="https://github.com/lakshmi2688">github.com/lakshmi2688</a></li>
 			</ul>
 		</footer>
 	</body>
