--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <p>In the current role at Puget Sound Energy, I lead the testing efforts of Data Analytics projects, make sure data looks correct and complete, and visually well represented to end customers via dashboards. I also reverse engineer and debug stored procedures and code to understand the business rules and logic. Prior to this role, I worked for Kaiser Permanente, Microsoft and Liberty Mutual in Lead Data Analyst and Test Engineer positions. I am interested in Deep Learning and Reinforcement learning. Currently pursuing masters in Data Science at University of Washington.</p>
 
-<p>Summary of skills:</p>
+<p>Summary of skills:
 <ul>
 <li>Knowledge of Statistics, End to End Data Science process, Exploratory Data Analysis/Data Mining and data visualization using Tableau and Power BI.</li>
 <li>Data analysis using SQL and programming using Java, Python and R</li>
@@ -28,6 +28,7 @@
 <li>Good understanding of the concepts of Experimentation Design such as A/B testing, Hypothesis Testing, ANOVA, Linear Regression.</li>
 <li>Working knowledge of continuous integration using Github and Jenkins and hands on executing code through cloud instances such as AWS EC2.</li>
 <ul>
+</p>
 
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
