--- a/index.html
+++ b/index.html
@@ -1,21 +1,9 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Lakshmi Venkatasubramanian</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Lakshmi Venkatasubramanian</h1>
+---
+layout: default
+title: Lakshmi Venkatasubramanian, Data Enthusiast
+---
+<div class="blurb">
+	<h1>Lakshmi Venkatasubramanian</h1>
 				<p>With over 10 years’ experience spanning Test Engineering and Data Analytics, supporting and driving projects End to End, I am interested in exploring opportunities in Data Science/Machine Learning and Product space. I strongly believe that the industrial experience in various domain and customer settings, demonstrated leadership, continuous learning and coursework foundation have prepared me to embrace unseen challenges in the data world and beyond.</p>
 
 <p>In the current role at Puget Sound Energy, I lead the testing efforts of Data Analytics projects, make sure data looks correct and complete, and visually well represented to end customers via dashboards. I also reverse engineer and debug stored procedures and code to understand the business rules and logic. Prior to this role, I worked for Kaiser Permanente, Microsoft and Liberty Mutual in Lead Data Analyst and Test Engineer positions. I am interested in Deep Learning and Reinforcement learning. Currently pursuing masters in Data Science at University of Washington.</p>
@@ -29,14 +17,4 @@
 <li>Working knowledge of continuous integration using Github and Jenkins and hands on executing code through cloud instances such as AWS EC2.</li>
 <ul>
 </p>
-
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:lakshmi2688@gmail.com">email</a></li>
-        		<li><a href="https://github.com/lakshmi2688">github.com/lakshmi2688</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+</div><!-- /.blurb -->
