--- a/resume/index.html
+++ b/resume/index.html
@@ -2,4 +2,4 @@
 layout: default
 title: Resume
 ---
-	<a href="Lakshmi Venkatasubramanian_Resume.pdf" title="Download My Resume"><img style="width: XXpx; height: YYpx; border: 0;"  src="pdf_image.png" alt="My Resume" /></a>
+	<a href="Lakshmi Venkatasubramanian_Resume.pdf" title="Download My Resume"><img style="width: 20px; height: 20px; border: 0;"  src="pdf_image.png" alt="My Resume" /></a>
