--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ title: Lakshmi Venkatasubramanian, Data Enthusiast
 ---
 <div class="blurb">
 	<h1>Lakshmi Venkatasubramanian</h1>
-				<p>With over 10 years’ experience spanning Test Engineering and Data Analytics, supporting and driving projects End to End, I am interested in exploring opportunities in Data Science/Machine Learning and Product space. I strongly believe that the industrial experience in various domain and customer settings, demonstrated leadership, continuous learning and coursework foundation have prepared me to embrace unseen challenges in the data world and beyond.</p>
+				<p>With over 10 years’ experience spanning Test Engineering and Data Analytics, supporting and driving projects end to end, I am interested in exploring opportunities in Data Science/Machine Learning and Product space. I strongly believe that the industrial experience in various domain and customer settings, demonstrated leadership, continuous learning and coursework foundation have prepared me to embrace unseen challenges in the data world and beyond.</p>
 
-<p>In the current role at Puget Sound Energy, I lead the testing efforts of Data Analytics projects, make sure data looks correct and complete, and visually well represented to end customers via dashboards. I also reverse engineer and debug stored procedures and code to understand the business rules and logic. Prior to this role, I worked for Kaiser Permanente, Microsoft and Liberty Mutual in Lead Data Analyst and Test Engineer positions. I am interested in Deep Learning and Reinforcement learning. Currently pursuing masters in Data Science at University of Washington.</p>
+<p>In the current role at Puget Sound Energy, I lead the testing efforts of Data Analytics projects, making sure data looks correct and complete, and visually well represented to end customers via dashboards. I also reverse engineer and debug stored procedures and code to understand the business rules and logic. Prior to this role, I worked for Kaiser Permanente, Microsoft and Liberty Mutual in Lead Data Analyst and Test Engineer positions. I am interested in Deep Learning and Reinforcement learning. I am currently pursuing masters in Data Science at University of Washington.</p>
 
 <p>Summary of skills:</p>
 <ul>
-<li>Knowledge of Statistics, End to End Data Science process, Exploratory Data Analysis/Data Mining and data visualization using Tableau and Power BI.</li>
+<li>Knowledge of Statistics, end to end Data Science process, Exploratory Data Analysis/Data Mining and data visualization using Tableau and Power BI.</li>
 <li>Data analysis using SQL and programming using Java, Python and R</li>
 <li>Implementation of Machine learning models such as Ridge Regression, logistic regression, Support Vector Machine, Principal Component Analysis and LASSO mathematically and using analysis packages such as NumPy, Scikit-learn, Pytorch and pandas.</li>
 <li>Good understanding of the concepts of Experimentation Design such as A/B testing, Hypothesis Testing, ANOVA, Linear Regression.</li>
