--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Lakshmi Venkatasubramanian, Data Enthusiast
 
 <p>In the current role at Puget Sound Energy, I lead the testing efforts of Data Analytics projects, making sure data looks correct and complete, and visually well represented to end customers via dashboards. I also reverse engineer and debug stored procedures and code to understand the business rules and logic. Prior to this role, I worked for Kaiser Permanente, Microsoft and Liberty Mutual in Lead Data Analyst and Test Engineer positions. I am interested in Deep Learning and Reinforcement learning. I am currently pursuing masters in Data Science at University of Washington.</p>
 
-<p>Summary of skills:</p>
+<p><strong>Summary of skills:</strong></p>
 <ul>
 <li>Knowledge of Statistics, end to end Data Science process, Exploratory Data Analysis/Data Mining and data visualization using Tableau and Power BI.</li>
 <li>Data analysis using SQL and programming using Java, Python and R</li>
