--- a/project/index.html
+++ b/project/index.html
@@ -4,8 +4,8 @@ title: Data Science projects
 ---
 	<h1>{{ page.title }}</h1>
 	<ul class="posts">
-
+		
 	  {% for post in site.posts %}
-	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+	    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	  {% endfor %}
 	</ul>
