--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Lakshmi Venkatasubramanian, Data Enthusiast
+thumbnail-img: path.jpg
 ---
 <div class="blurb">
 	<h1>Lakshmi Venkatasubramanian</h1>
