--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Lakshmi Venkatasubramanian, Data Enthusiast
-thumbnail-img: path.jpg
+thumbnail-img: IMG_2235.jpg
 ---
 <div class="blurb">
 	<h1>Lakshmi Venkatasubramanian</h1>
