--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@ title: Lakshmi Venkatasubramanian, Data Enthusiast
 	<h1>Lakshmi Venkatasubramanian</h1>
 				<p>With overall experience spanning Test Engineering and Data Analytics, supporting and driving projects end to end, I am a Data Enthusiast and Aspiring Data Scientist interested in exploring opportunities in Data Science/Machine Learning and Product space. I strongly believe that the industrial experience in various domain and customer settings, demonstrated leadership, continuous learning and coursework foundation have prepared me to embrace unseen challenges in the data world and beyond.</p>
 
-<p>In the current role at Puget Sound Energy, I lead the testing efforts of Data Analytics projects, making sure data looks correct and complete, and visually well represented to end customers via dashboards. I also reverse engineer and debug stored procedures and code to understand the business rules and logic. Prior to this role, I worked for Kaiser Permanente, Microsoft and Liberty Mutual in Lead Data Analyst and Test Engineer positions. I am interested in Deep Learning and Reinforcement learning. I am currently pursuing masters in Data Science at University of Washington.</p>
+<p>In the current role at Puget Sound Energy, I lead the testing efforts of Data Analytics projects, making sure data looks correct and complete, and visually well represented to end customers via dashboards. I also reverse engineer and debug stored procedures and code to understand the business rules and logic. Prior to this role, I worked for Kaiser Permanente, Microsoft and Liberty Mutual in Lead Data Analyst and Test Engineer positions. I am interested in Deep Learning and Natural Language Processing. I am currently pursuing masters in Data Science at University of Washington.</p>
 
 <p><strong>Summary of skills:</strong></p>
 <ul>
-<li>Knowledge of Statistics, end to end Data Science process, Exploratory Data Analysis/Data Mining and data visualization using Tableau and Power BI.</li>
+<li>Knowledge of Statistics and Data Science process and hands on with Data Modelling, Descriptive and Predictive Analytics, Machine Learning algorithms and Data Visualization</li>
 <li>Data analysis using SQL and programming using Java, Python and R</li>
-<li>Implementation of Machine learning models such as Ridge Regression, logistic regression, Support Vector Machine, Principal Component Analysis and LASSO mathematically and using analysis packages such as NumPy, Scikit-learn, Pytorch and pandas.</li>
+<li> Regression, Support Vector Machine, Principal Component Analysis, K-means clustering, LASSO, Sentiment analysis, hands-on using Scikit-learn analysis package, NumPy, Pytorch and pandas, familiarity with Natural Language Processing and
+Deep Learning</li>
 <li>Good understanding of the concepts of Experimentation Design such as A/B testing, Hypothesis Testing, ANOVA, Linear Regression.</li>
 <li>Working knowledge of continuous integration using Github and Jenkins and hands on executing code through cloud instances such as AWS EC2.</li>
 <ul>
