--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Lakshmi Venkatasubramanian, Data Enthusiast
 <ul>
 <li>Knowledge of Statistics and Data Science process and hands on with Data Modelling, Descriptive and Predictive Analytics, Machine Learning algorithms and Data Visualization</li>
 <li>Data analysis using SQL and programming using Java, Python and R</li>
-<li> Regression, Support Vector Machine, Principal Component Analysis, K-means clustering, LASSO, Sentiment analysis, hands-on using Scikit-learn analysis package, NumPy, Pytorch and pandas, familiarity with Natural Language Processing and
+<li> Regression, Support Vector Machine, Principal Component Analysis, Naive Bayes, K-means clustering, LASSO, Decision Trees, Sentiment analysis, hands-on using Scikit-learn analysis package, NumPy, Pytorch and pandas, familiarity with Natural Language Processing and
 Deep Learning</li>
 <li>Good understanding of the concepts of Experimentation Design such as A/B testing, Hypothesis Testing, ANOVA, Linear Regression.</li>
 <li>Working knowledge of continuous integration using Github and Jenkins and hands on executing code through cloud instances such as AWS EC2.</li>
