--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ title: Lakshmi Venkatasubramanian, Data Enthusiast
 ---
 <div class="blurb">
 	<h1>Lakshmi Venkatasubramanian</h1>
-				<p>I am a Data Enthusiast, Analytics Engineer and a Data Scientist interested in exploring challenging opportunities in Data Science/Machine Learning and Product space.  I strongly believe that the industrial experience in various domain and customer settings, demonstrated leadership, continuous learning and coursework foundation have prepared me to embrace unseen challenges in the data world and beyond.</p>
+				<p>With my background in Analytics and Test Engineering, I am transitioning into Data Scientist roles and interested in exploring challenging opportunities in Data Science/Machine Learning and Product space. I am the pursuit of exploring Machine Learning and use this space to showcase some of my learnings and projects . I strongly believe that the industrial experience in various domain and customer settings, demonstrated leadership, continuous learning and coursework foundation have prepared me to embrace unseen challenges in the data world and beyond.</p>
 	<p>I'm most proud of enabling data-driven decision making by contributing to the analysis and validations of Analytical solutions to end customers, building models, doing statistical analysis to answer business questions, transforming ambiguous requirements into well-defined actionable tasks using python and SQL, and automating redundant tasks using automation frameworks</p>
 
-<p>I am currently doing internship at Tesla. Prior to this role, I worked for Intuit as Machine Learning Intern. I have also worked for Puget Sound Energy, Kaiser Permanente, Microsoft and Liberty Mutual in Analytics, Program Management and Test Engineering space. I am interested in Deep Learning and Natural Language Processing. I am currently pursuing masters in Data Science at University of Washington.</p>
+<p>I interned at Tesla as a Data Engineer and at Intuit as Machine Learning Intern. I have also worked for Puget Sound Energy, Kaiser Permanente, Microsoft and Liberty Mutual in Analytics, Program Management and Test Engineering space. I am interested in Deep Learning and Natural Language Processing. I am currently pursuing masters in Data Science at University of Washington.</p>
 
 <p><strong>Summary of skills:</strong></p>
 <ul>
