--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Lakshmi Venkatasubramanian, Data Enthusiast
 <div class="blurb">
 	<h1>Lakshmi Venkatasubramanian</h1>
 				<p>With my background in Analytics and Test Engineering, I am transitioning into Data Scientist roles and interested in exploring challenging opportunities in Data Science/Machine Learning and Product space. I am in the pursuit of exploring Machine Learning techniques/tools and using this space to showcase some of my learnings and projects. My interests lies in Deep Learning and Natural Language Processing </p>
-	<p>I enabled data-driven decisions by contributing to the analysis and validations of Analytical solutions to end customers, building models, doing statistical analysis to answer business questions, transforming ambiguous requirements into well-defined actionable tasks using python and SQL, and automating redundant tasks using automation frameworks</p>
+	<p>I enable data-driven decisions by contributing to the analysis and validations of analytical solutions to end customers, building models, doing statistical analysis to answer business questions, transforming ambiguous requirements into well-defined actionable tasks using python and SQL, and automating redundant tasks using automation frameworks</p>
 
 <p>I interned at Tesla as a Data Engineer and at Intuit as Machine Learning Intern. I have also worked for Puget Sound Energy, Kaiser Permanente, Microsoft and Liberty Mutual in Analytics, Program Management and Test Engineering space.  Currently, pursuing masters in Data Science at University of Washington with an expected graduation date of March 2022.</p>
 
