--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ title: Lakshmi Venkatasubramanian, Data Enthusiast
 				<p>With my background in Analytics and Engineering, I transitioned into Data Scientist roles and interested in exploring challenging opportunities in Data Science/Machine Learning and Product space. I am in the pursuit of exploring Machine Learning techniques/tools and using this space to showcase some of my learnings and projects. My interests lies in Deep Learning and Natural Language Processing </p>
 	<p>I support enabling data-driven decisions by building analytical solutions to end customers, build models, perform statistical analysis to answer business questions, transform ambiguous requirements into well-defined actionable tasks, and automate redundant tasks using automation frameworks</p>
 
-<p>I currently work at Amazon as a Data Scientist. Prior to this, interned at Tesla as a Data Engineer and at Intuit as Machine Learning Intern, and worked for Puget Sound Energy, Kaiser Permanente, Microsoft and Liberty Mutual in Analytics, Program Management and Test Engineering space.  I also graduated from University of Washington specializing in Data Science (Mar 2022).</p>
+<p>I currently work at Amazon as a Data Scientist. Prior to this, interned at Tesla as a Data Engineer and at Intuit as Machine Learning Intern, and worked for Puget Sound Energy, Kaiser Permanente, Microsoft and Liberty Mutual in Analytics, and Test Engineering space.  I also graduated from University of Washington with Masters degree specializing in Data Science.</p>
 
 </div><!-- /.blurb -->
