--- a/index.html
+++ b/index.html
@@ -2,11 +2,45 @@
 layout: default
 title: Lakshmi Venkatasubramanian, Data Enthusiast
 ---
-<div class="blurb">
-	<h1>Lakshmi Venkatasubramanian</h1>
-				<p>I am a Full-Stack Data Scientist with background in Analytics and Engineering, and interested in exploring challenging opportunities in Data Science/Machine Learning and Product space. I am in the pursuit of exploring Machine Learning techniques/tools and using this space to showcase some of my learnings and projects. My interests lies in Deep Learning and Natural Language Processing </p>
-	<p>I support enabling data-driven decisions by building analytical solutions to end customers, build models, perform statistical analysis to answer business questions, transform ambiguous requirements into well-defined actionable tasks, and automate redundant tasks using automation frameworks</p>
+<section id="about">
+  <h2>👋 Hi, I’m Lakshmi Venkatasubramanian</h2>
+  <h3>Data Scientist @ Amazon | Ex-Intuit | Full-Stack ML Engineer | Forecasting, Pricing & Product Analytics</h3>
 
-<p>I currently work at Amazon as a Data Scientist. Prior to this, interned at Tesla as a Data Engineer and at Intuit as Machine Learning Intern, and worked for Puget Sound Energy, Kaiser Permanente, Microsoft and Liberty Mutual in Analytics, and Test Engineering space.  I also graduated from University of Washington with Masters degree specializing in Data Science.</p>
+  <p>
+    I’m a full-stack Data Scientist with a deep passion for solving high-impact business problems through machine learning, experimentation, and analytics. 
+    Currently at <strong>Amazon</strong>, I specialize in designing forecasting and pricing optimization frameworks that guide multi-billion-dollar product strategies. 
+    From <em>conjoint analysis</em> and <em>willingness-to-pay modeling</em> to <em>time series forecasting</em> and <em>inferential analysis</em>, 
+    my work helps launch and grow Amazon Devices in a data-driven way.
+  </p>
 
-</div><!-- /.blurb -->
+  <p>
+    Previously, I’ve built and deployed end-to-end ML solutions across companies like <strong>Intuit</strong>, <strong>Meta</strong>, 
+    <strong>Tesla</strong>, and <strong>Microsoft</strong>—driving efficiencies through <em>AutoML platforms</em>, 
+    <em>real-time inference APIs</em>, and <em>big data pipelines</em> using tools like <strong>Spark, Kubeflow, and Docker</strong>.
+  </p>
+
+  <h4>🔍 Areas of Focus:</h4>
+  <ul>
+    <li>Time Series Forecasting (SARIMAX, Prophet, KATS, LSTM)</li>
+    <li>Product Pricing & Conjoint Analysis</li>
+    <li>AutoML & Scalable ML Deployment (Databricks, H2O, Kubeflow)</li>
+    <li>Behavioral and Market Analytics at scale (Spark, SQL, AWS)</li>
+    <li>Experiment Design, A/B Testing, and Causal Inference</li>
+  </ul>
+
+  <p>
+    💡 I love exploring innovations in <strong>Deep Learning</strong>, <strong>LLMs</strong>, and <strong>NLP</strong>, and building intelligent systems that scale.
+  </p>
+
+  <p>
+    🎓 MS in Data Science – University of Washington<br>
+    📍 Based in Seattle | Open to collaboration, mentoring, and innovation
+  </p>
+
+  <p>
+    👉 Check out my 
+    <a href="https://lakshmi2688.github.io/project/" target="_blank">Projects</a>, 
+    <a href="https://github.com/lakshmi2688" target="_blank">GitHub</a>, or 
+    <a href="https://www.linkedin.com/in/lakshmi-venkatasubramanian-a903714b/" target="_blank">LinkedIn</a>.
+  </p>
+</section>
