--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@ title: Lakshmi Venkatasubramanian, Data Enthusiast
     <em>real-time inference APIs</em>, and <em>big data pipelines</em> using tools like <strong>Spark, Kubeflow, and Docker</strong>.
   </p>
 
-  <h4>🔍 Areas of Focus:</h4>
-  <ul>
-    <li>Time Series Forecasting (SARIMAX, Prophet, KATS, LSTM)</li>
-    <li>Product Pricing & Conjoint Analysis</li>
-    <li>AutoML & Scalable ML Deployment (Databricks, H2O, Kubeflow)</li>
-    <li>Behavioral and Market Analytics at scale (Spark, SQL, AWS)</li>
-    <li>Experiment Design, A/B Testing, and Causal Inference</li>
-  </ul>
+  <h4>🔍 Areas of Focus</h4>
+<ul style="line-height: 1.8; font-size: 1.05rem; font-weight: 500;">
+  <li>📈 <strong>Time Series Forecasting</strong> – SARIMAX, Prophet, KATS, LSTM</li>
+  <li>💸 <strong>Product Pricing & Conjoint Analysis</strong></li>
+  <li>⚙️ <strong>AutoML & Scalable ML Deployment</strong> – Databricks, H2O, Kubeflow</li>
+  <li>📊 <strong>Behavioral & Market Analytics at Scale</strong> – Spark, SQL, AWS</li>
+  <li>🧪 <strong>Experiment Design & Causal Inference</strong> – A/B Testing, Regression Modeling</li>
+</ul>
+
 
   <p>
     💡 I love exploring innovations in <strong>Deep Learning</strong>, <strong>LLMs</strong>, and <strong>NLP</strong>, and building intelligent systems that scale.
