--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Lakshmi Venkatasubramanian, Data Enthusiast
 ---
+<div class="blurb">
 <section id="about">
   <h2>👋 Hi, I’m Lakshmi Venkatasubramanian</h2>
   <h3>Data Scientist @ Amazon | Ex-Intuit | Full-Stack ML Engineer | Machine Learning, Deep Learning and Advanced Analytics</h3>
@@ -45,3 +46,4 @@ title: Lakshmi Venkatasubramanian, Data Enthusiast
     <a href="https://www.linkedin.com/in/lakshmi-venkatasubramanian-a903714b/" target="_blank">LinkedIn</a>.
   </p>
 </section>
+ </div><!-- /.blurb -->
