--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Lakshmi Venkatasubramanian, Data Enthusiast
 <div class="blurb">
 <section id="about">
   <h2>👋 Hi, I’m Lakshmi Venkatasubramanian</h2>
-  <h3>Data Scientist @ Amazon | Ex-Intuit | Full-Stack ML Engineer | Machine Learning, Deep Learning and Advanced Analytics</h3>
+  <h3>Data Scientist @ Amazon | Ex-Intuit | Full-Stack ML Engineer | Forecasting, LLMs and Advanced Analytics</h3>
 
   <p>
     I’m a full-stack Data Scientist with a deep passion for solving high-impact business problems through machine learning, experimentation, and analytics. 
