--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: Lakshmi Venkatasubramanian, Data Enthusiast
 
   <h3>🔍 Areas of Focus:</h3>
   <ul>
-    <li>Time Series Forecasting (SARIMAX, Prophet, KATS, LSTM)</li>
+    <li>Time Series Forecasting (SARIMAX, Prophet, LSTM)</li>
     <li>Product Pricing & Conjoint Analysis</li>
     <li>AutoML & Scalable ML Deployment (Databricks, H2O, Kubeflow)</li>
     <li>Behavioral and Market Analytics at scale (Spark, SQL, AWS)</li>
