--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Lakshmi Venkatasubramanian, Data Enthusiast
+title: Lakshmi Venkatasubramanian, Curious Mind. Analytical Heart
 ---
 
 <div class="blurb">
