--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@ title: Lakshmi Venkatasubramanian, Curious Mind. Analytical Heart
 <div class="blurb">
 <section id="about">
   <h2>👋 Hi, I’m Lakshmi Venkatasubramanian</h2>
-  <h3>Data Scientist @ Amazon | Ex-Intuit | Full-Stack ML Engineer | Forecasting, LLMs and Advanced Analytics</h3>
+  <h3>Data Scientist @ Microsoft | Ex-Amazon | Ex-Intuit | Full-Stack ML Engineer | Forecasting, Machine Learning and Advanced Analytics</h3>
 
   <p>
     I’m a full-stack Data Scientist with a deep passion for solving high-impact business problems through machine learning, experimentation, and analytics. 
-    Currently at <strong>Amazon</strong>, I specialize in designing forecasting and pricing optimization frameworks that guide multi-billion-dollar product strategies. 
+    Previously at <strong>Amazon</strong>, I specialized in designing forecasting and pricing optimization frameworks that guide multi-billion-dollar product strategies. 
     From <em>conjoint analysis</em> and <em>willingness-to-pay modeling</em> to <em>time series forecasting</em> and <em>inferential analysis</em>, 
-    my work helps launch and grow Amazon Devices in a data-driven way.
+    my work helped launch and grow Amazon Devices in a data-driven way.
   </p>
 
   <p>
-    Previously, I’ve built and deployed end-to-end ML solutions across companies like <strong>Intuit</strong>, <strong>Meta</strong>, 
-    <strong>Tesla</strong>, and <strong>Microsoft</strong>—driving efficiencies through <em>AutoML platforms</em>, 
+    I’ve built and deployed end-to-end ML solutions across companies—driving efficiencies through <em>AutoML platforms</em>, 
     <em>real-time inference APIs</em>, and <em>big data pipelines</em> using tools like <strong>Spark, Kubeflow, and Docker</strong>.
   </p>
 
