--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@ title: Lakshmi Venkatasubramanian, Curious Mind. Analytical Heart
 
   <p>
     I’m a full-stack Data Scientist with a deep passion for solving high-impact business problems through machine learning, experimentation, and analytics. 
-    Previously at <strong>Amazon</strong>, I specialized in designing forecasting and pricing optimization frameworks that guide multi-billion-dollar product strategies. 
+ </p>
+    
+  <p>Previously at <strong>Amazon</strong>, I specialized in designing forecasting and pricing optimization frameworks that guide multi-billion-dollar product strategies. 
     From <em>conjoint analysis</em> and <em>willingness-to-pay modeling</em> to <em>time series forecasting</em> and <em>inferential analysis</em>, 
-    my work helped launch and grow Amazon Devices in a data-driven way.
-  </p>
-
-  <p>
-    I’ve built and deployed end-to-end ML solutions across companies—driving efficiencies through <em>AutoML platforms</em>, 
+    my work helped launch and grow Amazon Devices in a data-driven way. I’ve built and deployed end-to-end ML solutions across companies—driving efficiencies through <em>AutoML platforms</em>, 
     <em>real-time inference APIs</em>, and <em>big data pipelines</em> using tools like <strong>Spark, Kubeflow, and Docker</strong>.
   </p>
 
